0027728: Visualization, OpenGl_Text - handle correctly object local transformation

OpenGl_Context::ApplyWorldViewMatrix() - reset ModelWorld matrix to identity for consistency with FFP.