src/OpenGl/OpenGl_Context.cxx
@@ -70,6 +70,7 @@ IMPLEMENT_STANDARD_RTTIEXT(OpenGl_Context,Standard_Transient)
 namespace
 {
   static const Handle(OpenGl_Resource) NULL_GL_RESOURCE;
+  static const OpenGl_Mat4 THE_IDENTITY_MATRIX;
 }
 
 // =======================================================================
@@ -2879,6 +2880,7 @@ void OpenGl_Context::ApplyWorldViewMatrix()
 
   if (!myShaderManager->IsEmpty())
   {
+    myShaderManager->UpdateModelWorldStateTo (THE_IDENTITY_MATRIX);
     myShaderManager->UpdateWorldViewStateTo (WorldViewState.Current());
   }
 }
